# ChemBL-MCP

./: .gitignore  CONTRIBUTING.md  README.md  mcp_server_test.py  pyproject.toml  requirements.txt  test_client.py
mcp_server/: __init__.py  __main__.py
mcp_server/activities/: __init__.py
mcp_server/assays/: __init__.py
mcp_server/documents/: __init__.py
mcp_server/molecules/: __init__.py
mcp_server/targets/: __init__.py
mcp_server/utils/: __init__.py
tests/: test_chembl_mcp_server.py
