[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chembl-mcp"
version = "0.1.0"
description = "MCP Server for ChEMBL"
requires-python = ">=3.10"
authors = [
    {name = "BioContext", email = "support@biocontext.ai"},
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"] 