[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chembl-mcp"
version = "0.1.0"
description = "MCP Server for ChEMBL data access"
requires-python = ">=3.10"
authors = [
    {name = "BioContext", email = "support@biocontext.ai"},
]
dependencies = [
    "chembl-webresource-client>=0.10.9",
    "httpx>=0.28.0",
    "mcp[cli]>=1.6.0",
    "pydantic>=2.0.0",
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
chembl-mcp = "mcp_server.__main__:run_server"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"] 